@@ -2,6 +2,7 @@
 
 	* codegen/reversewrapper.py (GFlagsReturn, GFlagsParam): Add type
 	handlers for GFlags in reverse wrappers.
+	(GtkTreePathParam): Add type handler for GtkTreePath* param.
 
 2005-01-08  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
